@@ -88,6 +88,7 @@ gnulib_modules="
   fsusage
   fsync
   ftello
+  ftoastr
   fts
   getgroups
   gethrxtime
